--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{deps, []}.
+{deps, [{uuid_erl, "2.0.2"}]}.
 
 {xref_checks, [
     undefined_function_calls, undefined_functions, locals_not_used,
