--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,43 +1,46 @@
 name: ci/cd
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main, release/*]
   pull_request:
     branches: [ main, release/*]
-
+  schedule:
+  - cron: "17 3 * * *"
+  
 jobs:
 
-  build:
-    name: Build on OTP ${{ matrix.otp_version }} / ${{ matrix.os }}
+  core-builds:
+    name: Erlang ${{ matrix.otp_version }} build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        otp_version: [19, 20, 21, 22, 23, 24]
-        os: [ubuntu-latest]
-
-    container:
-      image: erlang:${{ matrix.otp_version }}
+        otp_version: ['24', '25', '26', '27']
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Download rebar3
-      run: wget https://github.com/erlang/rebar3/releases/download/3.15.2/rebar3 && chmod 755 ./rebar3
-    - name: Update Path
-      run: echo "./" >> $GITHUB_PATH
+    - uses: actions/checkout@v4
+    - uses: erlef/setup-beam@v1
+      with:
+        otp-version: ${{ matrix.otp_version }}
+        rebar3-version: '3.22'
     - name: Check rebar3 Version
       run: DEBUG=1 rebar3 --version
     - name: Compile
-      run: ./rebar3 compile
+      run: rebar3 compile
     - name: Xref Checks
-      run: ./rebar3 xref
-    #- name: Dialyzer
-    #  run: ./rebar3 dialyzer
-    - name: Run Tests
-      run: ./rebar3 as test eunit
-    - name: Test Coverage
-      run: ./rebar3 as test do proper -c, cover -v --min_coverage=0
+      run: rebar3 xref
+    - name: Dialyzer
+      run: rebar3 dialyzer
+    - name: Proper Tests
+      run: rebar3 as test do compile, proper --regressions
+    # - name: Run Tests
+    #   run: rebar3 ct -c
+    - name: Run Unit Tests
+      run: rebar3 as test lfe ltest -tall
+    # - name: Test Coverage
+    #   run: rebar3 as test do proper -c, cover -v --min_coverage=0
     - name: Notify CI/CD Slack Channel
       uses: innocarpe/actions-slack@v1
       with:
@@ -49,3 +52,36 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.CICD_BOT_TOKEN }}
         SLACK_WEBHOOK_URL: ${{ secrets.CICD_BOT_WEBHOOK }}
       if: always()
+
+  older-builds:
+    name: Old Erlang ${{ matrix.otp_version }} build
+    runs-on: ubuntu-20.04
+
+    strategy:
+      matrix:
+        otp_version: ['21', '22', '23']
+
+    steps:
+    - uses: actions/checkout@v4
+    - uses: erlef/setup-beam@v1
+      with:
+        otp-version: ${{ matrix.otp_version }}
+        rebar3-version: '3.15'
+    - name: Install Deps
+      run: sudo apt-get update && sudo apt-get install -y gnuplot
+    - name: Compile
+      run: rebar3 compile
+    - name: Xref Checks
+      run: rebar3 xref
+    - name: Dialyzer
+      run: rebar3 dialyzer
+    - name: Compile Tests
+      run: rebar3 as test compile
+    - name: Proper Tests
+      run: rebar3 as test proper --regressions
+    # - name: Run Tests
+    #   run: rebar3 ct -c
+    - name: Run Unit Tests
+      run: rebar3 as test lfe ltest -tall
+    # - name: Test Coverage
+    #   run: rebar3 as test do proper -c, cover -v --min_coverage=0
