Added dev profile.

--- a/rebar.config
+++ b/rebar.config
@@ -20,6 +20,10 @@
             {rebar3_proper, {git, "https://github.com/ferd/rebar3_proper", {tag, "0.12.1"}}}
         ]},
         {eunit_opts, [verbose]}
+    ]},
+    {dev, [
+        {deps, [lfe]},
+        {plugins, [rebar3_lfe]}
     ]}
 ]}.
 
