--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 
-{deps, [{uuid, "2.0.5", {pkg, uuid_erl}}]}.
+{deps, [{uuid, "~> 2.0", {pkg, uuid_erl}}]}.
 
 {xref_checks, [
     undefined_function_calls, undefined_functions, locals_not_used,
