Added profile for publishing to hex.pm.

--- a/rebar.config
+++ b/rebar.config
@@ -24,6 +24,9 @@
     {dev, [
         {deps, [lfe]},
         {plugins, [rebar3_lfe]}
+    ]},
+    {maintainer, [
+        {plugins, [rebar3_hex]}
     ]}
 ]}.
 
@@ -38,5 +41,9 @@
         dialyzer,
         eunit,
         coverage
+    ]},
+    {publish, [
+        compile,
+        {hex, "publish package"}
     ]}
 ]}.
